src/view-components/contact/slideshow.scss
@import '../../assets/scss/media.scss';

/* Slideshow */
.slideshow {
    margin: 0 auto;
    overflow: hidden;
    max-width: 100%;
    height: 100%;
    position: relative;

    &__slider {
        white-space: nowrap;
        overflow: hidden;
        height: 100vh;
        background-color: rgba(0, 0, 0, 0.1);
    }

    &__backdrop {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: #000000;
        opacity: 0.1;
        z-index: 2;
    }

    &__slide {
        display: none;
        height: 100%;
        width: 100%;
        background-attachment: fixed;
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
        z-index: -2;

        span {
            max-width: 60%;
            font-size: 1.5rem;
        }

        &.active {
            // -webkit-animation: zoom-a 3s linear infinite alternate;
            // /* Safari 4+ */
            // -moz-animation: zoom-a 3s linear infinite alternate;
            // /* Fx 5+ */
            // -o-animation: zoom-a 3s linear infinite alternate;
            // /* Opera 12+ */
            // animation: zoom-a 3s linear infinite alternate;
            /* IE 10+, Fx 29+ */
            justify-content: center;
            align-items: center;
            color: #ffffff;

            @include breakpoint(small) {
                animation: none;
            }
        }


        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
            // z-index: -2;
            position: fixed;
            top: 0;
        }

        >h1 {
            max-width: 40ch;
            font-size: calc(1rem + 2vw) !important;
        }
    }

    /* Buttons */
    &__dots {
        text-align: center;
        position: absolute;
        bottom: 5%;
        right: 5%;
        z-index: 3;
    }

    &__dot {
        display: inline-block;
        height: 3px;
        width: 3rem;
        border-radius: 2px;
        cursor: pointer;
        margin: 0 3px;
        background: linear-gradient(to left, #8b8b8b 50%, #ffffff 50%) right;
        background-size: 200%;

        &.active {
            transition: all 7s ease;
            background-position: left;
        }
    }
}

@-webkit-keyframes zoom-a {
    0% {
        background-size: 125% auto;
    }

    100% {
        background-size: 130% auto;
    }
}

@-moz-keyframes zoom-a {
    0% {
        background-size: 125% auto;
    }

    100% {
        background-size: 130% auto;
    }
}

@-o-keyframes zoom-a {
    0% {
        background-size: 125% auto;
    }

    100% {
        background-size: 130% auto;
    }
}

@keyframes zoom-a {
    0% {
        background-size: 125% auto;
    }

    100% {
        background-size: 130% auto;
    }
}

